--- a/redhat-csp-download/ansible/download.yml
+++ b/redhat-csp-download/ansible/download.yml
@@ -6,7 +6,7 @@
 
   tasks:
     - name: Download product zips
-      no_log: True
+      #no_log: True
       redhat_csp_download:
         url: "{{ item.url }}"
         dest: "{{ item.file }}"
